# rzlogic

./: .gitignore  README.md  make.sh  setup.py
.github/workflows/: test.yml
agent/: cli.py  main.py  problems.py  utils.py
agent/src/: main.py  problems.py  utils.py
inference/: CMakeLists.txt
inference/include/: logic.hpp  parser.hpp
inference/src/: bindings.cpp  logic.cpp  main.cpp  parser.cpp
inference/tests/: CMakeLists.txt  test_all.cpp  test_cnf.cpp  test_parser.cpp  test_pnf.cpp  test_resolution.cpp  test_snf.cpp  test_unification.cpp  utils.cpp  utils.hpp
librzlogic/: CMakeLists.txt
librzlogic/include/: logic.hpp  parser.hpp
librzlogic/src/: bindings.cpp  logic.cpp  main.cpp
librzlogic/tests/: CMakeLists.txt  test_pnf.cpp  test_snf.cpp  test_unification.cpp  utils.hpp
rzresolution_pkg/: setup.py
rzresolution_pkg/rzresolution/: __init__.py
src/: main.py
